crates/client/tests/snapshots/render__floating_plugin_window_with_a_rounded_top_only.snap
---
source: crates/client/tests/render.rs
expression: "fixture.render(Size::new(40, 10))"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 10 },
    content: [
        "╭──────────────────╮                    ",
        "│                  │                    ",
        "│         ────────────────────          ",
        "│          inside                       ",
        "│                                       ",
        "│                                       ",
        "│                                       ",
        "│                  │                    ",
        "│                  │                    ",
        "╰──────────────────╯                    ",
    ],
    styles: [
        x: 0, y: 0, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 1, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 2, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 3, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 3, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 4, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 4, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 6, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 7, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 8, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
cursor: None
