crates/client/tests/snapshots/render__floating_window_ignores_the_camera.snap
---
source: crates/client/tests/render.rs
expression: at_forty
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "╭──────────────────────────────────────╮╭──────────────────────────────────────╮",
        "│window 1                              ││window 2                              │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                   ╭──────────────────────────────────────╮                   │",
        "│                   │window 3                              │                   │",
        "│                   │                                      │                   │",
        "│                   │                                      │                   │",
        "│                   │                                      │                   │",
        "│                   │                                      │                   │",
        "│                   │                                      │                   │",
        "│                   │                                      │                   │",
        "│                   │                                      │                   │",
        "│                   │                                      │                   │",
        "│                   │                                      │                   │",
        "│                   ╰──────────────────────────────────────╯                   │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "╰──────────────────────────────────────╯╰──────────────────────────────────────╯",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 0, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 1, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 1, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 2, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 2, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 3, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 3, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 4, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 4, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 5, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 5, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 60, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 6, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 21, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 60, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 7, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 21, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 60, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 8, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 21, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 60, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 9, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 21, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 60, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 10, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 21, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 60, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 11, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 21, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 60, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 12, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 21, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 60, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 13, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 21, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 60, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 14, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 21, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 60, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 15, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 21, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 60, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 16, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 60, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 17, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 18, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 18, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 19, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 19, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 20, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 20, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 21, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 21, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 22, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 22, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 23, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
    ]
}
cursor: Some(Position { x: 49, y: 1 })
